@@ -31,6 +31,7 @@
                 focusFollowsMouse = NSButton; 
                 hideTab = id; 
                 kbEntryAction = NSPopUpButton; 
+                kbEntryDeleteButton = NSButton; 
                 kbEntryKey = NSPopUpButton; 
                 kbEntryKeyCode = NSTextField; 
                 kbEntryKeyModifierCommand = NSButton; 
